- fix a few layout bugs - add bottom links for legit-ness and contact

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -163,7 +163,6 @@ form {
 #top_right {
     float:right;
     position:relative;
-    top:-20;
     margin:10px;
 }
 #top_right a {
